@@ -21,6 +21,7 @@
  */
 
 #include <string.h>
+#include <stdlib.h>
 #include "common.h"
 #include "player.h"
 #include "effects.h"
@@ -1061,6 +1062,9 @@ static int read_event_it(struct context_data *ctx, struct xmp_event *e, int chn)
 
 	set_effect_defaults(ctx, note, sub, xc, is_toneporta);
 	if (sub != NULL) {
+		int pan_swing = (sub->rvv & 0xff00) >> 8;
+		CLAMP(pan_swing, 0, 64);
+
 		if (note >= 0) {
 			if (sub->pan >= 0)
 				xc->pan.val = sub->pan;
@@ -1073,6 +1077,11 @@ static int read_event_it(struct context_data *ctx, struct xmp_event *e, int chn)
 		} else if (ev.ins) {
 			if (sub->pan >= 0)
 				xc->pan.val = sub->pan;
+		}
+
+		if (pan_swing) {
+			xc->pan.val = (xc->pan.val * (64 - pan_swing) +
+					(rand() % 256) * pan_swing) >> 6;
 		}
 	}
 	
